--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,27 @@ version: '3.8'
 name: monitor-stack
 
 services:
+  nginx:
+    image: nginx:alpine
+    container_name: nginx-proxy
+    restart: unless-stopped
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    networks:
+      - monitoring
+    depends_on:
+      - prometheus
+      - grafana
+      - loki
+
   prometheus:
     image: prom/prometheus:v2.48.0
     container_name: prometheus
     restart: unless-stopped
-    ports:
-      - "9090:9090"
+    # Removed direct port exposure - access through Nginx only
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - ./prometheus/targets-telegraf.json:/etc/prometheus/targets-telegraf.json:ro
@@ -28,8 +43,7 @@ services:
     image: grafana/loki:2.9.2
     container_name: loki
     restart: unless-stopped
-    ports:
-      - "3100:3100"
+    # Removed direct port exposure - access through Nginx only
     volumes:
       - ./loki/loki-config.yml:/etc/loki/local-config.yaml:ro
       - ./storage/loki:/loki
@@ -55,8 +69,7 @@ services:
     image: grafana/grafana:10.2.2
     container_name: grafana
     restart: unless-stopped
-    ports:
-      - "3000:3000"
+    # Removed direct port exposure - access through Nginx only
     volumes:
       - ./storage/grafana:/var/lib/grafana
       - ./grafana/provisioning:/etc/grafana/provisioning:ro
@@ -64,6 +77,10 @@ services:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
       - GF_USERS_ALLOW_SIGN_UP=false
+      - GF_SERVER_ROOT_URL=http://localhost/grafana/
+      - GF_SERVER_SERVE_FROM_SUB_PATH=true
+      - GF_SERVER_DOMAIN=localhost
+      - GF_SERVER_PROTOCOL=http
     networks:
       - monitoring
     depends_on:
