--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -11,7 +11,7 @@ global:
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
 
   - job_name: 'telegraf'
     file_sd_configs:
