--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,7 +52,7 @@ http {
 
         # Grafana reverse proxy
         location /grafana/ {
-            proxy_pass http://grafana:3000/;
+            proxy_pass http://grafana:3000/grafana/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -60,10 +60,12 @@ http {
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Prefix /grafana;
             
-            # Handle redirects from Grafana
-            proxy_redirect http://grafana:3000/ /grafana/;
-            proxy_redirect http://$host:3000/ /grafana/;
-            proxy_redirect http://localhost:3000/ /grafana/;
+            # Handle redirects - rewrite Grafana's redirects to keep /grafana/ prefix
+            proxy_redirect http://$host/grafana/ /grafana/;
+            proxy_redirect http://grafana:3000/grafana/ /grafana/;
+            proxy_redirect http://$host:3000/grafana/ /grafana/;
+            proxy_redirect http://localhost:3000/grafana/ /grafana/;
+            proxy_redirect default;
             
             # WebSocket support for Grafana
             proxy_http_version 1.1;
