--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
       - GF_SERVER_DOMAIN=localhost
       - GF_SERVER_PROTOCOL=http
       - GF_SERVER_FROM_EMAIL=noreply@localhost
+      - GF_USERS_DEFAULT_HOME_DASHBOARD_PATH=/dashboards
     networks:
       - monitoring
     depends_on:
