--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -82,6 +82,58 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Thanos Query API endpoints (catch /api/v1/ requests from Thanos UI)
+        location ~ ^/api/v1/ {
+            proxy_pass http://thanos-query:10903;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
+        # Thanos Query UI static files and other paths
+        location ~ ^/(graph|stores|status|targets|flags|alerts|config|rules) {
+            proxy_pass http://thanos-query:10903;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+        }
+
+        # Thanos Query reverse proxy - redirect /thanos to /thanos/
+        location = /thanos {
+            return 301 /thanos/;
+        }
+
+        # Thanos Query reverse proxy
+        location /thanos/ {
+            # Strip /thanos prefix and forward to Thanos Query
+            rewrite ^/thanos/(.*) /$1 break;
+            proxy_pass http://thanos-query:10903;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            
+            # Handle redirects from Thanos Query
+            proxy_redirect http://thanos-query:10903/ /thanos/;
+            proxy_redirect http://$host/ /thanos/;
+            proxy_redirect default;
+            
+            # WebSocket support
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+        }
+
         # Root redirect to Grafana (only for exact match to avoid loops)
         location = / {
             return 301 /grafana/login;
