--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,8 +6,14 @@ global:
     environment: 'production'
     prometheus_replica: 'prometheus-0'
 
-# rule_files:
-#   - 'alerts/*.yml'
+rule_files:
+  - 'alerts/*.yml'
+
+alerting:
+  alertmanagers:
+    - static_configs:
+        - targets:
+          - alertmanager:9093
 
 scrape_configs:
   - job_name: 'prometheus'
