--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -82,6 +82,26 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
+        # Alertmanager reverse proxy - redirect /alertmanager to /alertmanager/
+        location = /alertmanager {
+            return 301 /alertmanager/;
+        }
+
+        # Alertmanager reverse proxy
+        location /alertmanager/ {
+            proxy_pass http://alertmanager:9093/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            
+            # Handle redirects from Alertmanager
+            proxy_redirect http://alertmanager:9093/ /alertmanager/;
+            proxy_redirect http://$host:9093/ /alertmanager/;
+            proxy_redirect default;
+        }
+
         # Thanos Query API endpoints (catch /api/v1/ requests from Thanos UI)
         location ~ ^/api/v1/ {
             proxy_pass http://thanos-query:10903;
