--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -38,3 +38,51 @@ scrape_configs:
           - '/etc/prometheus/targets-windows-exporter.json'
         refresh_interval: 30s
 
+  # Blackbox Exporter - TCP Port Monitoring
+  - job_name: 'blackbox-tcp'
+    metrics_path: /probe
+    params:
+      module: [tcp_connect]
+    file_sd_configs:
+      - files:
+          - '/etc/prometheus/targets-blackbox.json'
+        refresh_interval: 30s
+    relabel_configs:
+      # Only process targets with job=tcp_probe
+      - source_labels: [job]
+        regex: tcp_probe
+        action: keep
+      # Use target address as __param_target
+      - source_labels: [__address__]
+        target_label: __param_target
+      # Set blackbox exporter as the actual target
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
+      # Keep original target as instance label
+      - source_labels: [__param_target]
+        target_label: instance
+
+  # Blackbox Exporter - HTTP/HTTPS Monitoring
+  - job_name: 'blackbox-http'
+    metrics_path: /probe
+    params:
+      module: [http_2xx]
+    file_sd_configs:
+      - files:
+          - '/etc/prometheus/targets-blackbox.json'
+        refresh_interval: 30s
+    relabel_configs:
+      # Only process targets with job=http_probe
+      - source_labels: [job]
+        regex: http_probe
+        action: keep
+      # Use target address as __param_target
+      - source_labels: [__address__]
+        target_label: __param_target
+      # Set blackbox exporter as the actual target
+      - target_label: __address__
+        replacement: blackbox-exporter:9115
+      # Keep original target as instance label
+      - source_labels: [__param_target]
+        target_label: instance
+
