--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -40,6 +40,8 @@ scrape_configs:
 
   # Blackbox Exporter - TCP Port Monitoring
   - job_name: 'blackbox-tcp'
+    scrape_interval: 5m
+    scrape_timeout: 30s
     metrics_path: /probe
     params:
       module: [tcp_connect]
@@ -64,6 +66,8 @@ scrape_configs:
 
   # Blackbox Exporter - HTTP/HTTPS Monitoring
   - job_name: 'blackbox-http'
+    scrape_interval: 5m
+    scrape_timeout: 30s
     metrics_path: /probe
     params:
       module: [http_2xx]
