--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -1,7 +1,7 @@
 apiVersion: 1
 
 providers:
-  # Default provider disabled to avoid conflicts with MOH provider
+  # Default provider disabled to avoid conflicts with ONCO provider
   # If you need a default provider, use a separate directory
   # - name: 'Default'
   #   orgId: 1
@@ -12,13 +12,13 @@ providers:
   #   allowUiUpdates: true
   #   options:
   #     path: /var/lib/grafana/dashboards/default
-  - name: 'MOH'
+  - name: 'ONCO'
     orgId: 1
-    folder: 'MOH'
+    folder: 'ONCO'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
     allowUiUpdates: true
     options:
-      path: /var/lib/grafana/dashboards/MOH
+      path: /var/lib/grafana/dashboards/ONCO
 
