--- a/loki/loki-config.yml
+++ b/loki/loki-config.yml
@@ -28,7 +28,7 @@ schema_config:
       object_store: s3
       schema: v13
       index:
-        prefix: loki/MOH/index_
+        prefix: loki/ONCO/index_
         period: 24h
 
 compactor:
