--- a/grafana/provisioning/dashboards/dashboards.yml
+++ b/grafana/provisioning/dashboards/dashboards.yml
@@ -1,24 +1,12 @@
 apiVersion: 1
 
 providers:
-  # Default provider disabled to avoid conflicts with MOH provider
-  # If you need a default provider, use a separate directory
-  # - name: 'Default'
-  #   orgId: 1
-  #   folder: ''
-  #   type: file
-  #   disableDeletion: false
-  #   updateIntervalSeconds: 10
-  #   allowUiUpdates: true
-  #   options:
-  #     path: /var/lib/grafana/dashboards/default
-  - name: 'MOH'
+  - name: 'Infrastructure'
     orgId: 1
-    folder: 'MOH'
+    folder: 'Infrastructure'
     type: file
     disableDeletion: false
     updateIntervalSeconds: 10
     allowUiUpdates: true
     options:
-      path: /var/lib/grafana/dashboards/MOH
-
+      path: /var/lib/grafana/dashboards/Infrastructure
