--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 name: monitor-stack
 
+# ===========================================
+# Site Configuration: Change ACTIVE_SITE in site.env
+# Available sites: MOH, ONCO
+# ===========================================
+
 services:
   nginx:
     image: nginx:alpine
@@ -23,13 +28,17 @@ services:
     image: prom/prometheus:v2.48.0
     container_name: prometheus
     restart: unless-stopped
+    env_file:
+      - site.env
     # Removed direct port exposure - access through Nginx only
     volumes:
       - ./prometheus/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - ./prometheus/targets-telegraf.json:/etc/prometheus/targets-telegraf.json:ro
-      - ./prometheus/targets-node-exporter.json:/etc/prometheus/targets-node-exporter.json:ro
-      - ./prometheus/targets-windows-exporter.json:/etc/prometheus/targets-windows-exporter.json:ro
-      - ./prometheus/targets-blackbox.json:/etc/prometheus/targets-blackbox.json:ro
+      # Site-specific targets loaded from prometheus/sites/${ACTIVE_SITE}/
+      # To change site: edit ACTIVE_SITE in site.env and run: docker-compose --env-file site.env up -d
+      - ./prometheus/sites/${ACTIVE_SITE:-MOH}/targets-telegraf.json:/etc/prometheus/targets-telegraf.json:ro
+      - ./prometheus/sites/${ACTIVE_SITE:-MOH}/targets-node-exporter.json:/etc/prometheus/targets-node-exporter.json:ro
+      - ./prometheus/sites/${ACTIVE_SITE:-MOH}/targets-windows-exporter.json:/etc/prometheus/targets-windows-exporter.json:ro
+      - ./prometheus/sites/${ACTIVE_SITE:-MOH}/targets-blackbox.json:/etc/prometheus/targets-blackbox.json:ro
       - ./prometheus/alerts:/etc/prometheus/alerts:ro
       - prometheus-data:/prometheus
     command:
