--- a/site.env
+++ b/site.env
@@ -11,9 +11,17 @@ ACTIVE_SITE=MOH
 # S3/AWS Configuration (optional - for long-term storage)
 # ===========================================
 # Leave empty if not using S3 storage
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_REGION=us-east-1
-S3_BUCKET=observability
+# AWS S3 Configuration
+# Replace these values with your actual AWS credentials
+
+AWS_ACCESS_KEY_ID=AKIAVLDYJGKOCGW3BNXP
+AWS_SECRET_ACCESS_KEY=Ew+MqQLs1JMN3/zJyDhBZSrDuZIoT0eczJKB69Br
+AWS_REGION=ap-south-1
+
+# S3 Endpoint (use s3.amazonaws.com for AWS, or your S3-compatible endpoint like MinIO)
 S3_ENDPOINT=s3.amazonaws.com
+
+# Single S3 Bucket for all observability data (Thanos metrics + Loki logs)
+S3_BUCKET=adeaobserv
+
 
