Add Multi site targets

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ S3_ENDPOINT=s3.amazonaws.com
 
 # Single S3 Bucket for all observability data (Thanos metrics + Loki logs)
 S3_BUCKET=adeaobserv
+
+ACTIVE_SITE=MOH
